Add GlobalExceptionHandler to properly handle JobPortalException and other exceptions